<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.AddQuizFragment">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutQuizName"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/quizNameTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Quiz Name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayoutQuizDescription"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutQuizName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/quizDescripTextEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Quiz Description" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/addWordButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:text="Add Word"
        app:layout_constraintEnd_toStartOf="@+id/addBadDefButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutQuizDescription" />

    <LinearLayout
        android:id="@+id/wordsLayout"
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toStartOf="@+id/badDefsLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addWordButton"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".4" />

    <Button
        android:id="@+id/addBadDefButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="Add Bad Definition"
        app:layout_constraintStart_toEndOf="@+id/addWordButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutQuizDescription" />

    <LinearLayout
        android:id="@+id/badDefsLayout"
        android:orientation="vertical"
        android:layout_width="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent=".4"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/saveButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/wordsLayout"
        app:layout_constraintTop_toBottomOf="@+id/addBadDefButton"/>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="SAVE"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/cancelButton" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="CANCEL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>